# PoC-Ticketing

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .coverage  .dockerignore  .env  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  azure_devops_adapter.py  email_templates.py  jira_adapter.py  jira_mappings.py  jira_utils.py  mock_adapter.py  smtp_adapter.py
backend/app/api/: __init__.py  approvals.py  attachments.py  audit.py  auth.py  comments.py  health.py  notifications.py  sync.py  tickets.py  users.py
backend/app/core/: __init__.py  config.py  dependencies.py  logging.py  middleware.py  security.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/domain/: __init__.py  approval_rules.py  enums.py  exceptions.py  interfaces.py  ticket_lifecycle.py
backend/app/models/: __init__.py  attachment.py  audit.py  comment.py  notification.py  sync_queue.py  ticket.py  user.py
backend/app/repositories/: __init__.py  ticket_repository.py
backend/app/schemas/: approval.py  auth.py  comment.py  ticket.py  user.py
backend/app/services/: __init__.py  approval_service.py  audit_service.py  auth_service.py  notification_service.py  sync_service.py  ticket_service.py
backend/app/workers/: __init__.py  sync_worker.py
backend/tests/: conftest.py
backend/tests/integration/: test_approvals.py  test_attachments.py  test_audit.py  test_comments.py  test_notifications.py  (+2 more)
backend/ticketing_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+77 files in other folders)
